fix(annotations): Fixed editing annotations being behind map chip

--- a/scss/os/_annotation.scss
+++ b/scss/os/_annotation.scss
@@ -1,3 +1,7 @@
+.c-annotation__editing {
+  z-index: 1;
+}
+
 .c-annotation__svg {
   pointer-events: none;
 
